// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders burger button click correctly 1`] = `
<Fragment>
  <header>
    <Link
      to="/"
    >
      <img
        alt="Pokemon-Logo"
        className="logo-pokemon"
        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg"
      />
    </Link>
    <div
      className="toggle-button"
      onClick={[Function]}
    >
      <div
        className="bar1open"
      />
      <div
        className="bar2open"
      />
      <div
        className="bar3open"
      />
    </div>
    <nav>
      <ul
        className="open"
      >
        <li>
          <Link
            to="/list"
          >
            Pokemon List
          </Link>
        </li>
        <li>
          <Link
            to="/my-list"
          >
            My Pokemons
          </Link>
        </li>
      </ul>
    </nav>
    <hr />
  </header>
</Fragment>
`;

exports[`renders header correctly 1`] = `
<Fragment>
  <header>
    <Link
      to="/"
    >
      <img
        alt="Pokemon-Logo"
        className="logo-pokemon"
        src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg"
      />
    </Link>
    <div
      className="toggle-button"
      onClick={[Function]}
    >
      <div
        className="bar1"
      />
      <div
        className="bar2"
      />
      <div
        className="bar3"
      />
    </div>
    <nav>
      <ul
        className=""
      >
        <li>
          <Link
            to="/list"
          >
            Pokemon List
          </Link>
        </li>
        <li>
          <Link
            to="/my-list"
          >
            My Pokemons
          </Link>
        </li>
      </ul>
    </nav>
    <hr />
  </header>
</Fragment>
`;
